# 2D-Platformer-Engine

./: .gitignore  CMakeLists.txt
include/: Game.h  Gamestate.h  Globals.h
include/AudioManager/: AudioFunctions.h  AudioManager.h
include/GUI/: BaseGui.h  GUI.h  LevelEditorGui.h
include/Interfaces/: GamestateInterface.h
include/LevelEditor/: LevelEditor.h
include/MainMenu/: MainMenu.h
include/PauseMenu/: PauseMenu.h
include/Playing/: Playing.h
include/Playing/Entities/Player/: Player.h
include/Playing/LevelManager/: Level.h  LevelManager.h  Tiles.h
resources/LevelData/: level1.txt  level2.txt  level3.txt  level4.txt  leveldata_format.txt
src/: Game.cpp  main.cpp
src/AudioManager/: AudioFunctions.cpp  AudioManager.cpp
src/GUI/: BaseGui.cpp  GUI.cpp  LevelEditorGui.cpp
src/LevelEditor/: LevelEditor.cpp
src/MainMenu/: MainMenu.cpp
src/PauseMenu/: PauseMenu.cpp
src/Playing/: Playing.cpp
src/Playing/Entities/Player/: Player.cpp
src/Playing/LevelManager/: Level.cpp  LevelManager.cpp
